--- a/package.json
+++ b/package.json
@@ -2,25 +2,27 @@
     "name": "fat_cat_TESSEL",
     "version": "1.0.0",
     "description": "device code for tessel 2 fat cat web based cat feeder",
-    "main": "server.js",
+    "main": "index.js",
     "scripts": {
-        "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-        "start:prod": "node server.js",
-        "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-        "client": "cd client && npm run start",
-        "install": "cd client && npm install",
-        "build": "cd client && npm run build",
-        "heroku-postbuild": "npm run build && npm run-script seed"
+        "deploy": "echo 'Deploying via USB...' && t2 push --usb index.js",
+        "start:device": "echo 'Running on Tessel device via USB...' && t2 run --usb index.js",
+        "start": "echo 'Starting web UI...' && node index.js",
+        "test": "jest",
+        "test:watch": "npm test -- --watch"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "body-parser": "^1.18.3",
-        "concurrently": "^5.2.0",
         "dotenv": "^8.2.0",
         "express": "^4.16.4",
-        "if-env": "^1.0.4",
         "nodejs-websocket": "^1.7.2",
-        "nodemon": "^2.0.3"
+        "johnny-five": "^1.0.0",
+        "tessel-io": "^1.2.0",
+        "twilio": "^3.42.2"
+    },
+    "devDependencies": {
+        "eslint-plugin-jest": "^23.2.0",
+        "jest": "^24.9.0",
+        "t2-cli": "^0.1.23"
     }
 }
