--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
         "johnny-five": "^1.4.0",
         "socket.io": "^2.3.0",
         "t2-cli": "^0.1.23",
-        "tessel-io": "^1.3.0",
-        "twilio": "^3.42.2"
+        "tessel-io": "^1.3.0"
     },
     "devDependencies": {
         "eslint-plugin-jest": "^23.2.0",
