--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "main": "index.js",
     "scripts": {
         "deploy": "echo 'Deploying via USB...' && t2 push --usb index.js",
+        "build": "cd client && npm run build",
         "start:device": "echo 'Running on Tessel device via USB...' && t2 run --usb index.js",
-        "start": "echo 'Starting web UI...' && node index.js",
+        "start:local": "echo 'Starting web UI...' && node index.js",
         "test": "jest",
         "test:watch": "npm test -- --watch"
     },
