--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "johnny-five": "^1.4.0",
         "socket.io": "^2.3.0",
         "t2-cli": "^0.1.23",
-        "tessel-io": "^1.3.0"
+        "tessel-io": "^1.3.0",
+        "twilio": "^3.42.2"
     },
     "devDependencies": {
         "eslint-plugin-jest": "^23.2.0",
