--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "dotenv": "^8.2.0",
-    "node-sass": "^4.14.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "2.0.5",
+    "sass": "^1.49.7",
     "socket.io-client": "^2.3.0",
     "tessel-io": "^1.3.0"
   },
